Removal of AM content from span tag

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<span id="minutes">00</span>
 		<span>:</span>
 		<span id="seconds">00</span>
-		<span id="meridiem">AM</span>
+		<span id="meridiem"></span>
 	</div>
 
 <script type="text/javascript"  defer src="script.js"></script>
