--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<!-- External Stylesheet -->
 	<link href="stylesheet.css" rel="stylesheet" type="text/css">
 
-	<title>Project 5: Build a Clock</title>
+	<title>Build a Clock</title>
 </head>
 <body>
 	<div class="container">
